# pyproject.toml
[project]
name = "ComfyUI_AITECCAFE_Toolkit" # Unique identifier for your node. Immutable after creation.
description = "This custom node includes the following functions: Chat_GPT, image_moderation, media_loader, merge_strings, sequential_image_loader, NSFW Checker."
version = "1.1.0" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/AI-TEC/ComfyUI-AITECCAFE-Toolkit"

[tool.comfy]
PublisherId = "@aiteccafe" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "ComfyUI_AITECCAFE_Toolkit" # Display name for the Custom Node. Can be changed later.
Icon = "" # SVG, PNG, JPG or GIF (MAX. 800x400px)